--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,7 +29,7 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -39,7 +39,7 @@
                             Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans</a>
                     </li>
@@ -89,7 +89,7 @@
                                 </a>
                             </div>
                             <div class="">
-                                <a href="#" class="btn btn-primary rounded-pill">
+                                <a href="/plans" class="btn btn-primary rounded-pill">
                                     View Plans
                                     <i class="far fa-map pl-2" aria-hidden="true"></i>
                                 </a>
@@ -157,7 +157,8 @@
 
         <!-- Actions -->
         <div class="my-4 actions px-3">
-            <div class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 border-rounded">
+            <div
+                class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 py-3 border-rounded">
                 <div class="col-12 col-md-4 d-flex justify-content-center align-items-center p-0">
                     <img src="media/web_development.png" class="img-fluid w-75" alt="">
                 </div>
@@ -178,7 +179,7 @@
                 </div>
             </div>
             <div
-                class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 -3 border-rounded">
+                class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 py-3 border-rounded">
                 <div class="col-12 col-md-4 d-flex justify-content-center align-items-center p-0">
                     <img src="media/choose_plan.jpg" class="img-fluid w-75" alt="">
                 </div>
@@ -190,7 +191,7 @@
                             Choose From Our Basic, Stadard & Advanced Plans And Choose The One Which Fulfills Your
                             Requirements. We Will Provide You An Amazing Website According To Your Need.
                         </p>
-                        <a href="#" class="btn indigo text-white rounded-pill py-md-2 px-md-3">
+                        <a href="/plans" class="btn indigo text-white rounded-pill py-md-2 px-md-3">
                             View Plans
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -198,7 +199,7 @@
                 </div>
             </div>
             <div
-                class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 -3 border-rounded">
+                class="col-12 col-xl-10 mx-auto row no-gutters p-0 bg-white shadow-lg border px-2 mb-4 py-3 border-rounded">
                 <div class="col-12 col-md-4 d-flex justify-content-center align-items-center p-0">
                     <img src="media/still-confused.jpg" class="img-fluid w-75" alt="">
                 </div>
@@ -388,7 +389,7 @@
                             Presence Is
                             So Important, And It Will Grow More In Post-Covid World. Take You Buisness Online With Us.
                         </p>
-                        <a href="#" class="btn orange text-white rounded-pill py-md-2 px-md-3">
+                        <a href="#" class="btn orange text-white rounded-pill py-md-2 px-md-3 font-weight-bold">
                             Contact Now
                             <i class="fa fa-arrow-right" aria-hidden="true"></i>
                         </a>
