--- a/plans.html
+++ b/plans.html
@@ -64,11 +64,11 @@
     <section class="container-fluid px-0 pt-5 mt-3 plans-page">
         <div class="plans-header px-3 col-12 mx-0 mb-5 mt-3 mt-lg-5 col-12 col-lg-8 mx-auto">
             <div
-                class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 py-md-2">
+                class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
                 <div class="col-12 col-md-8 col-xl-9">
-                    <h1 class="font-weight-bolder text-center mdb-color-text bold-heading">
+                    <h2 class="font-weight-bolder text-center mdb-color-text bold-heading">
                         Choose The Plan Which FullFills Your Requirement
-                    </h1>
+                    </h2>
                 </div>
                 <div class="col-9 col-md-4 col-xl-3 mx-auto m-0 p-0">
                     <img src="media/choose-plan.jpg" alt="" class="img-fluid">
