--- a/plans.html
+++ b/plans.html
@@ -62,7 +62,7 @@
 
     <!-- Page Content -->
     <section class="container-fluid px-0 pt-5 mt-3 plans-page">
-        <div class="plans-header px-3 col-12 mx-0 mb-5 mt-3 mt-lg-5 col-12 col-lg-8 mx-auto">
+        <div class="plans-header px-3 col-12 mx-0 mb-5 mt-3 mt-lg-5 col-12 col-lg-8 mx-auto bg-light">
             <div
                 class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
                 <div class="col-12 col-md-8 col-xl-9">
@@ -77,7 +77,7 @@
         </div>
         <div class="row no-gutters px-0 m-0 bg-info py-5">
             <div class="header col-12">
-                <h1 class="text-center mdb-color-text display-4 bold-heading">
+                <h1 class="text-center deep-purple-text display-4 bold-heading">
                     Our Plans
                 </h1>
                 <hr class="py-1 col-1 rounded-pill mx-auto bg-secondary">
