--- a/plans.html
+++ b/plans.html
@@ -62,7 +62,7 @@
 
     <!-- Page Content -->
     <section class="container-fluid px-0 pt-5 mt-3 plans-page">
-        <div class="plans-header px-3 col-12 mx-0 mb-5 mt-3 mt-lg-5 col-12 col-lg-8 mx-auto bg-light">
+        <div class="plans-header px-3 col-12 mx-0 pb-5 pt-3 pt-lg-5 col-12 col-lg-8 mx-auto bg-light">
             <div
                 class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
                 <div class="col-12 col-md-8 col-xl-9">
