--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,7 +29,7 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="index.html">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -39,7 +39,7 @@
                             Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans</a>
                     </li>
@@ -49,7 +49,7 @@
                             About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
                             Contact</a>
                     </li>
@@ -83,13 +83,13 @@
                         <h2 class="h2 mdb-color-text">Want Your Own Awesome Website For Your Buisness or StartUp?</h2>
                         <div class="row no-gutters col-lg-10 m-0 p-0 justify-content-start">
                             <div class="">
-                                <a href="#" class="btn btn-warning rounded-pill">
+                                <a href="contact.html" class="btn btn-warning rounded-pill">
                                     Contact Now
                                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                                 </a>
                             </div>
                             <div class="">
-                                <a href="/plans" class="btn btn-primary rounded-pill">
+                                <a href="plans.html" class="btn btn-primary rounded-pill">
                                     View Plans
                                     <i class="far fa-map pl-2" aria-hidden="true"></i>
                                 </a>
@@ -171,7 +171,7 @@
                             Presence Is
                             So Important, And It Will Grow More In Post-Covid World. Take You Buisness Online With Us.
                         </p>
-                        <a href="#" class="btn orange text-white rounded-pill py-md-2 px-md-3">
+                        <a href="contact.html" class="btn orange text-white rounded-pill py-md-2 px-md-3">
                             Contact Now
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -191,7 +191,7 @@
                             Choose From Our Basic, Stadard & Advanced Plans And Choose The One Which Fulfills Your
                             Requirements. We Will Provide You An Amazing Website According To Your Need.
                         </p>
-                        <a href="/plans" class="btn indigo text-white rounded-pill py-md-2 px-md-3">
+                        <a href="plans.html" class="btn indigo text-white rounded-pill py-md-2 px-md-3">
                             View Plans
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
@@ -389,7 +389,8 @@
                             Presence Is
                             So Important, And It Will Grow More In Post-Covid World. Take You Buisness Online With Us.
                         </p>
-                        <a href="#" class="btn orange text-white rounded-pill py-md-2 px-md-3 font-weight-bold">
+                        <a href="contact.html"
+                            class="btn orange text-white rounded-pill py-md-2 px-md-3 font-weight-bold">
                             Contact Now
                             <i class="fa fa-arrow-right" aria-hidden="true"></i>
                         </a>
@@ -414,7 +415,7 @@
                     <h5 class="mb-1">Let's Make An Awesome Website For You Too.!</h5>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#!" class="btn btn-outline-white rounded-pill">
+                    <a href="contact.html" class="btn btn-outline-white rounded-pill">
                         Contact Now
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </a>
