--- a/plans.html
+++ b/plans.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,7 +29,7 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="index.html">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home</a>
                     </li>
@@ -39,7 +39,7 @@
                             Services</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans <span class="sr-only">(current)</span></a>
                     </li>
@@ -49,7 +49,7 @@
                             About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
                             Contact</a>
                     </li>
@@ -62,22 +62,24 @@
 
     <!-- Page Content -->
     <section class="container-fluid px-0 pt-5 mt-3 plans-page">
-        <div class="plans-header px-3 col-12 mx-0 pb-5 pt-3 pt-lg-5 col-12 col-lg-8 mx-auto bg-light">
-            <div
-                class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
-                <div class="col-12 col-md-8 col-xl-9">
-                    <h2 class="font-weight-bolder text-center mdb-color-text bold-heading">
-                        Choose The Plan Which FullFills Your Requirement
-                    </h2>
-                </div>
-                <div class="col-9 col-md-4 col-xl-3 mx-auto m-0 p-0">
-                    <img src="media/choose-plan.jpg" alt="" class="img-fluid">
+        <div class="bg-light col-12">
+            <div class="plans-header px-3 col-12 mx-0 pb-5 pt-3 pt-lg-5 col-12 col-lg-8 mx-auto">
+                <div
+                    class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
+                    <div class="col-12 col-md-8 col-xl-9">
+                        <h2 class="font-weight-bolder text-center mdb-color-text bold-heading">
+                            Choose The Plan Which FullFills Your Requirement
+                        </h2>
+                    </div>
+                    <div class="col-9 col-md-4 col-xl-3 mx-auto m-0 p-0">
+                        <img src="media/choose-plan.jpg" alt="" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row no-gutters px-0 m-0 bg-info py-5">
             <div class="header col-12">
-                <h1 class="text-center deep-purple-text display-4 bold-heading">
+                <h1 class="text-center dark-grey-text display-4 bold-heading">
                     Our Plans
                 </h1>
                 <hr class="py-1 col-1 rounded-pill mx-auto bg-secondary">
@@ -106,7 +108,8 @@
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Easy To Use Admin Panel</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>PoP-Ups</li>
                         </ul>
-                        <a href="#" class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
+                        <a href="contact.html"
+                            class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -132,14 +135,16 @@
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Login/Register System</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Search System</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Simple Logo</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>SEO Friendly</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Friendly Dashboard</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Posters</li>
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Easy Navigations</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Very Secure</li>
-                            <li><span class="fa-li"><i class="fas fa-check"></i></span>And Many Other Features...</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>You Can Add More Feaatures
+                                According To Your Need</li>
                         </ul>
-                        <a href="#" class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
+                        <a href="contact.html"
+                            class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -170,7 +175,8 @@
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>User Wallet Integration</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Refferal System Integration</li>
                         </ul>
-                        <a href="#" class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
+                        <a href="contact.html"
+                            class="btn btn-block btn-blue z-depth-0 rounded-pill font-weight-bold my-2">Contact
                             <i class="fa fa-arrow-right pl-1" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -190,8 +196,8 @@
                 <p class="text-center blue-grey-text font-weight-bold">These Features Are Added On Demand</p>
             </div>
             <div class="row no-gutters m-0 p-0">
-                <div class="col-12 col-md-6 col-lg-4 p-2">
-                    <div class="card py-0">
+                <div class="col-12 col-md-6 col-lg-4 m-0 px-1 py-4 px-md-2 px-xl-3">
+                    <div class="card border shadow rounded-lg py-0">
                         <div class="card-img m-0 p-0">
                             <img src="media/chatbot.jpg" alt="" class="img-fluid">
                         </div>
@@ -205,32 +211,33 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 p-2">
-                    <div class="card py-0">
+                <div class="col-12 col-md-6 col-lg-4 m-0 px-1 py-4 px-md-2 px-xl-3">
+                    <div class="card border shadow rounded-lg py-0">
                         <div class="card-img m-0 p-0">
-                            <img src="media/chatbot.jpg" alt="" class="img-fluid">
+                            <img src="media/mlm-img.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="card-body text-center better-text">
-                            <h2 class="bold-heading mdb-color-text">Chatbots</h2>
+                            <h2 class="bold-heading mdb-color-text">Network Marketing</h2>
                             <p class="font-weight-bold text-justify">
-                                ChatBots Are New Trend In This Digital World. They Act Like Humans. Chatbots Interact
-                                With Users And Then Collect & Store Data In The Databases. Chatbots Can Increase User
-                                Interactivity With The Website Leading IN More Sales.
+                                Network Marketing Is A Very Powerful Technique To Boost Your Sales And Business. It
+                                Allows You To Build A Large Network Of Your Customers.
+                                WebbyWolf Can Integrate MLM Features In Your Website Which Are Easy To Use And Control.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 p-2">
-                    <div class="card py-0">
+                <div class="col-12 col-md-6 col-lg-4 m-0 px-1 py-4 px-md-2 px-xl-3">
+                    <div class="card border shadow rounded-lg py-0">
                         <div class="card-img m-0 p-0">
-                            <img src="media/chatbot.jpg" alt="" class="img-fluid">
+                            <img src="media/other-features.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="card-body text-center better-text">
-                            <h2 class="bold-heading mdb-color-text">Chatbots</h2>
+                            <h2 class="bold-heading mdb-color-text">And Others...</h2>
                             <p class="font-weight-bold text-justify">
-                                ChatBots Are New Trend In This Digital World. They Act Like Humans. Chatbots Interact
-                                With Users And Then Collect & Store Data In The Databases. Chatbots Can Increase User
-                                Interactivity With The Website Leading IN More Sales.
+                                WebbyWolf Doesn't Limits Your Website's Features. You Can Add Any Features According To
+                                Your Need. We Will Integrate That Features In Your Website. You Can Tell Us
+                                Which Functionality You Want In Website, We Will Integrate That Functionality In
+                                Your Website.
                             </p>
                         </div>
                     </div>
@@ -255,7 +262,7 @@
                     <h5 class="mb-1">Let's Make An Awesome Website For You Too.!</h5>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#!" class="btn btn-outline-white rounded-pill">
+                    <a href="contact.html" class="btn btn-outline-white rounded-pill">
                         Contact Now
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </a>
