--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     <!-- Page Content -->
     <section class="container-fluid px-0 pt-5 mt-3 contact-page">
         <div class="bg-light col-12">
-            <div class="contact-us-header px-3 col-12 mx-0 pb-5 pt-3 pt-lg-5 col-12 col-lg-8 mx-auto">
+            <div class="contact-us-header px-2 col-12 mx-0 pb-4 pt-4 py-lg-5 col-12 col-lg-8 mx-auto">
                 <div
                     class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
                     <div class="col-12 col-md-8 col-xl-9">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="row no-gutters">
+        <div class="row no-gutters py-4 py-lg-2">
             <div class="col-12 col-md-6 col-lg-4 px-3 py-3 py-lg-5">
                 <div class="bg-white shadow border-rounded border col-12 py-3 px-2 d-flex align-items-center">
                     <div class="col-4 text-right">
