--- a/contact.html
+++ b/contact.html
@@ -38,20 +38,20 @@
                             <i class="fas fa-toolbox pr-2" aria-hidden="true"></i>
                             Services</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
-                            Plans <span class="sr-only">(current)</span></a>
+                            Plans</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
                             <i class="fas fa-paper-plane pr-2" aria-hidden="true"></i>
                             About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
-                            Contact</a>
+                            Contact <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
