--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             Plans</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="about.html">
                             <i class="fas fa-paper-plane pr-2" aria-hidden="true"></i>
                             About</a>
                     </li>
