--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="bg-white shadow border border-rounded px-3 py-4 row no-gutters align-items-cente4">
                         <div class="col-12 col-md-4 text-center pb-4 pb-md-0">
-                            <i class="fa fa-smile-beam fa-6x text-danger" aria-hidden="true"></i>
+                            <i class="fa fa-smile-beam fa-6x cyan-text" aria-hidden="true"></i>
                         </div>
                         <div class="col-12 col-md-8">
                             <h2 class="text-center mdb-color-text bold-heading">Keep Imroving Our Work Untill 100%
