--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,7 +29,7 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="index.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home</a>
                     </li>
@@ -39,17 +39,17 @@
                             Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/services">
                             <i class="fas fa-paper-plane pr-2" aria-hidden="true"></i>
                             About <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/contact">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
                             Contact</a>
                     </li>
@@ -61,7 +61,7 @@
 
 
     <!-- Page Content -->
-    <section class="container-fluid px-0 pt-5 mt-3 plans-page">
+    <section class="container-fluid px-0 pt-5 mt-3 about-page">
         <div class="bg-light col-12">
             <div class="contact-us-header px-2 col-12 mx-0 pb-4 pt-4 py-lg-5 col-12 col-lg-8 mx-auto">
                 <div
@@ -94,7 +94,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-12 col-lg-8 col-xl-6 mx-auto py-4 px-3 bg-light p-0 border-rounded shadow my-4">
+            <div class="col-12 col-lg-8 col-xl-6 mx-auto py-4 px-3 bg-light p-0 border-rounded shadow my-4 m-0">
                 <div class="py-3 px-2">
                     <h1 class="bold-heading display-6  text-center mdb-color-text">Our Vision</h1>
                     <hr class="pt-1 py-md-1 col-1 rounded-pill bg-danger mx-auto mb-4 mt-0">
@@ -147,7 +147,7 @@
                     <h5 class="mb-1">Let's Make An Awesome Website For You Too.!</h5>
                 </li>
                 <li class="list-inline-item">
-                    <a href="contact.html" class="btn btn-outline-white rounded-pill">
+                    <a href="/contact" class="btn btn-outline-white rounded-pill">
                         Contact Now
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </a>
