--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="index.html"
+            <a class="navbar-brand font-weight-bold pl-xl-5 col px-0 mx-0 ml-lg-5 text-white" href="/index"
                 style="font-size: 32px;">Webby<span class="yellow-text">Wolf</span>
             </a>
 
@@ -29,27 +29,27 @@
                 id="navbarSupportedContent">
                 <ul class="navbar-nav font-weight-bold align-self-stretch h-100 py-3 py-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="index.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/index">
                             <i class="fa fa-home pr-2" aria-hidden="true"></i>
                             Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/services">
                             <i class="fas fa-toolbox pr-2" aria-hidden="true"></i>
                             Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="plans.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/plans">
                             <i class="far fa-map pr-2" aria-hidden="true"></i>
                             Plans</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="about.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/about">
                             <i class="fas fa-paper-plane pr-2" aria-hidden="true"></i>
                             About</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="contact.html">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/contact">
                             <i class="fas fa-envelope pr-2" aria-hidden="true"></i>
                             Contact <span class="sr-only">(current)</span></a>
                     </li>
@@ -144,7 +144,7 @@
                     <h5 class="mb-1">Let's Make An Awesome Website For You Too.!</h5>
                 </li>
                 <li class="list-inline-item">
-                    <a href="contact.html" class="btn btn-outline-white rounded-pill">
+                    <a href="/contact" class="btn btn-outline-white rounded-pill">
                         Contact Now
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </a>
