--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebbyWolf - We Craft Websites</title>
+    <title>About Us - Know More About Us & Our Mission</title>
     <link rel="shortcut icon" href="media/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,400i,500,500i,700,700i,900,900i"
@@ -97,7 +97,7 @@
             </div>
             <div class="col-12 col-lg-8 col-xl-6 mx-auto py-4 px-3 bg-light p-0 border-rounded shadow my-4 m-0">
                 <div class="py-3 px-2">
-                    <h1 class="bold-heading display-6  text-center mdb-color-text">Our Vision</h1>
+                    <h1 class="bold-heading display-6  text-center mdb-color-text">Our Missions</h1>
                     <hr class="pt-1 py-md-1 col-1 rounded-pill bg-danger mx-auto mb-4 mt-0">
                     <div class="bg-white shadow border border-rounded px-3 py-4 row no-gutters align-items-center mb-4">
                         <div class="col-12 col-md-4 text-center pb-4 pb-md-0">
