--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                             Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="#">
+                        <a class="nav-link px-4 px-xl-4 rounded-pill" href="/services">
                             <i class="fas fa-toolbox pr-2" aria-hidden="true"></i>
                             Services</a>
                     </li>
