--- a/services.html
+++ b/services.html
@@ -65,8 +65,10 @@
     <section class="container-fluid px-0 pt-5 mt-3 services-page">
         <div class="bg-light col-12">
             <div class="plans-header px-0 px-lg-3 col-12 mx-0 pb-5 pt-4 pt-lg-5 col-12 col-lg-10 col-xl-8 mx-auto">
-                <div
-                    class="bg-white shadow-lg border-rounded row no-gutters align-items-center flex-lg-row-reverse py-4 px-2 py-md-2">
+                <div class="bg-white shadow-lg border-rounded row no-gutters align-items-center py-4 px-2 py-md-2">
+                    <div class="col-9 col-md-4 mx-auto m-0 p-0">
+                        <img src="media/website-development.jpg" alt="" class="img-fluid">
+                    </div>
                     <div class="col-12 col-md-8 px-3">
                         <h1 class="font-weight-bolder text-center mdb-color-text bold-heading display-5">
                             Our Services
@@ -78,9 +80,6 @@
                             Like Native/Hybrid App Development, SEO, SMM, Content Creation, Cyber Security, Software
                             Developement, Data Analysis, And Many More Services Very Soon...
                         </p>
-                    </div>
-                    <div class="col-9 col-md-4 mx-auto m-0 p-0">
-                        <img src="media/website-development.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
